# mechadealer

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: pytest.yml
app/: app.vue  nuxt.config.ts  package.json
app/assets/css/: main.css
app/layouts/: default.vue
app/pages/: dashboard.vue  index.vue  login.vue
app/pages/strategies/: [id].vue  index.vue
app/store/: strategy.ts  user.ts
containers/: docker-compose.yaml
docs/: README.md  code-standards.md  end-notes.md  overview.md  security-measures.md  system-analysis.md  system-design.md  testing.md
libs/brokerlib/: __init__.py  main.py  pyproject.toml
libs/brokerlib/upstox/: __init__.py  auth.py  core.py
libs/coreutils/: README.md  __init__.py  credentials.py  logger.py  pyproject.toml  scheduler.py
libs/datastore/: __init__.py  db.py  main.py  pyproject.toml
libs/kafka/: __init__.py  pyproject.toml
libs/kafkalib/: __init__.py  events.py  main.py  models.py  pyproject.toml  setup.py  topics.py  typelist.py
libs/store/: README.md  __init__.py  main.py  models.py  pyproject.toml  setup.py  store.py  tables.py  users.py
libs/storelib/: __init__.py  _setup.py  _tables.py  models.py  pyproject.toml  store.py  users.py
libs/strategy/: main.py  pyproject.toml
libs/strategylib/: __init__.py  data_builder.py  main.py  pyproject.toml
projects/app_server/: main.py  pyproject.toml
projects/backtester/: pyproject.toml
projects/datastore/: README.md  __init__.py  db.py  init.py  main.py  pyproject.toml
projects/datastore/source/upstox/: upstox.py
projects/datastore/sources/upstox/: __init__.py  client.py  fetcher.py  main.py  symbols.py
projects/datasync/: Dockerfile  README.md  db.py  main.py  pyproject.toml
projects/datasync/sources/: upstox.py
projects/orders_management/: main.py  pyproject.toml
projects/orders_management/sources/: __init__.py  upstox.py
projects/stats_handler/: main.py  pyproject.toml
projects/strategy_0/: main.py  pyproject.toml
tests/: datastore_tests.py  kafkalib_tests.py  main.py  storelib_tests.py  strategy_tests.py
tests/datastore/: test_main.py
tests/kafkalib/: test_main.py
tests/storelib/: test_main.py
tests/strategy/: test_main.py
