[project]
dependencies = [
  "nox>=2025.2.9",
  "ntplib>=0.4.0",
  "pendulum>=3.0.0",
  "python-dotenv>=1.1.0",
]
description = "Add your description here"
name = "mechadealer"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.uv.workspace]
members = ["projects/*", "datasync"]

[dependency-groups]
dev = [
  "pyright>=1.1.398",
  "ruff>=0.11.2",
  "typing>=3.10.0.0",
]

[tools.pyright]
reportMissingTypeArgument = true
strictListInference = true
