[project]
dependencies = [
  "datastore",
  "kafka",
  "kafkalib",
  "nox>=2025.2.9",
  "pendulum>=3.0.0",
  "pydantic>=2.10.6",
  "python-dotenv>=1.1.0",
]
description = "Add your description here"
name = "mechadealer"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.uv.workspace]
members = ["projects/*", "libs/datastore", "libs/strategy", "libs/store"]

[tool.uv.sources]
datastore = { workspace = true }
kafkalib = { path = "libs/kafkalib", editable = true }

[dependency-groups]
dev = ["pyright>=1.1.398", "ruff>=0.11.2", "typing>=3.10.0.0"]

[tool.pyright]
reportMissingTypeArgument = true
strictListInference = true
