[project]
dependencies = [
  "coreutils",
  "datastore",
  "kafka",
  "kafkalib",
  "pendulum>=3.0.0",
  "pydantic>=2.10.6",
  "python-dotenv>=1.1.0",
  "storelib",
  "strategylib",
]
description = "Add your description here"
name = "mechadealer"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.uv.workspace]
members = [
  "projects/*",
  "libs/datastore",
  "libs/storelib",
  "libs/coreutils",
  "libs/strategylib",
]

[tool.uv.sources]
datastore = { workspace = true }
kafkalib = { path = "libs/kafkalib", editable = true }
storelib = { workspace = true }
coreutils = { workspace = true }
strategylib = { workspace = true }

[dependency-groups]
dev = ["pyright>=1.1.398", "ruff>=0.11.2", "typing>=3.10.0.0"]

[tool.pyright]
reportMissingTypeArgument = true
strictListInference = true
