[project]
name = "brokerlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coreutils",
    "datastore",
    "pytz>=2025.2",
    "requests>=2.32.3",
]

[tool.uv.sources]
coreutils = { workspace = true }
datastore = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["."]

[tool.hatch.build.targets.wheel]
packages = ["__init__.py"]
force-include = { "." = "brokerlib" }
