[project]
name = "coreutils"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "python-json-logger>=3.3.0",
    "cryptography>=42.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["."]

[tool.hatch.build.targets.wheel]
packages = ["__init__.py"]
force-include = { "." = "coreutils" }
