[project]
name = "datastore"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pavittarx", email = "29155477+pavittarx@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "psycopg-pool>=3.2.6",
    "psycopg[binary]>=3.2.6",
    "typing>=3.10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["."]

[tool.hatch.build.targets.wheel]
packages = ["__init__.py"]
force-include = { "." = "datastore" }
