[project]
name = "kafka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pavittarx", email = "29155477+pavittarx@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
