[project]
name = "kafkalib"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pavittarx", email = "29155477+pavittarx@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["."]

[tool.hatch.build.targets.wheel]
packages = ["__init__.py"]
force-include = { "." = "kafkalib" }
