[project]
name = "storelib"
version = "0.2.17"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "bcrypt>=4.3.0",
  "psycopg2-binary>=2.9.10",
  "pydantic>=2.10.6",
  "python-dotenv>=1.1.0",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["."]

[tool.hatch.build.targets.wheel]
packages = ["__init__.py"]
force-include = { "." = "storelib" }
