[project]
name = "app-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coreutils",
    "fastapi[standard]>=0.115.12",
    "pyjwt>=2.10.1",
    "storelib",
]

[tool.uv.sources]
coreutils = { workspace = true }
storelib = { workspace = true }
