[project]
name = "app-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.40",
    "storelib",
]

[tool.uv.sources]
storelib = { workspace = true }
