[project]
name = "orders-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coreutils",
    "datastore",
    "kafkalib>=0.2.8",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "storelib",
]

[tool.uv.sources]
datastore = { workspace = true }
storelib = { workspace = true }
coreutils = { workspace = true }
