[project]
name = "stats-handler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brokerlib",
    "coreutils",
    "storelib",
]

[tool.uv.sources]
coreutils = { workspace = true }
storelib = { workspace = true }
brokerlib = { workspace = true }
