[project]
name = "strategy-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26,<2.0",
    "pandantic>=1.0.1",
    "pandas>=2.2.3",
    "pandas-ta>=0.3.14b0",
    "setuptools>=80.9.0",
    "strategylib",
]

[tool.uv.sources]
strategylib = { workspace = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
backend-path = ["."]
